<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:text="@string/txt_content"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_mail"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:hint="Underline color change"
        android:backgroundTint="@android:color/holo_red_light"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_pass"
            android:textColor="@color/white"
            android:gravity="left"
            android:textSize="30sp"
            android:hint="Underline color change"
            android:backgroundTint="@android:color/holo_red_light"/>
    </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_login"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:background="@drawable/button_color"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/txt_sign_up"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_lang_1"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_lang_2"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="25sp"
                />
        </LinearLayout>


</LinearLayout>